--- a/portalocdspy_frontend/templates/footer.html
+++ b/portalocdspy_frontend/templates/footer.html
@@ -16,7 +16,7 @@
                          <a href="/acerca">Acerca de</a>
                       </li>
                       <li>
-                         <a href="/preguntas">Red Flags</a>
+                         <a href="/preguntas">Banderas Rojas</a>
                       </li>
                       <li>
                            <a href="http://standard.open-contracting.org/latest/es/">
