--- a/portalocdspy_frontend/templates/admin/admin.html
+++ b/portalocdspy_frontend/templates/admin/admin.html
@@ -10,16 +10,24 @@
 <div class="container-fluid fondoColorPrimario fondoPrincipalPagina tamanoMinimo">
 <div class="container">
    <div class="row pb-2">
-      <div class="col-md-12 mt-5 mb-5"><h1 class="textoColorBlanco textoTitular1Grueso textoAlineadoCentrado">Interfaz para administracion de las banderas rojas evaluadas en los procesos de contratacion</h1></div>
-     <div class="col-md-12">
+      <div class="col-md-12 mt-5 mb-5">
+         <h1 class="textoColorBlanco textoTitular1Grueso textoAlineadoCentrado">Interfaz para administracion de las
+            banderas rojas evaluadas en los procesos de contratacion</h1>
+      </div>
+      <div class="col-md-12 p-5 text-center border border-white rounded">
          <h4 class="textoColorBlanco textoTitular2Grueso">
-               Subir un nuevo conjunto de reglas
+            Subir un nuevo conjunto de reglas
          </h4>
          <form method="post" enctype="multipart/form-data">
-             {% csrf_token %}
-            <input style="color: #FFFFFF;" type="file" name="document"
-               accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" required>
-             <button type="submit" class="etiquetaFiltro contenidoTablaCaracteristicas">Subir Excel</button>
+            {% csrf_token %}
+            <div class="pt-5 d-flex justify-content-center align-items-center">
+               <input class="text-white" type="file" name="document"
+                  accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
+                  required>
+               <button type="submit" class="botonBlancoFiltroBusqueda ml-3" style="font-size: 35px;">
+                  <i class="fas fa-upload" tabindex="0"></i>
+               </button>
+            </div>
          </form>
       </div>
    </div>
